@@ -1,32 +1,40 @@
 /*
- * Copyright (c) 2020-2030, Shuigedeng (981376577@qq.com & https://blog.taotaocloud.top/).
+ * Copyright (c) 2020-2030 ZHENGGENGWEI(码匠君)<herodotus@aliyun.com>
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
+ * Dante Engine licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      https://www.apache.org/licenses/LICENSE-2.0
+ * <http://www.apache.org/licenses/LICENSE-2.0>
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
+ *
+ * Dante Engine 采用APACHE LICENSE 2.0开源协议，您在使用过程中，需要注意以下几点：
+ *
+ * 1.请不要删除和修改根目录下的LICENSE文件。
+ * 2.请不要删除和修改 Dante Cloud 源码头部的版权声明。
+ * 3.请保留源码和相关描述文件的项目出处，作者声明等。
+ * 4.分发源码时候，请注明软件出处 <https://gitee.com/herodotus/dante-engine>
+ * 5.在修改包名，模块名称，项目代码等时，请注明软件出处 <https://gitee.com/herodotus/dante-engine>
+ * 6.若您的项目无法满足以上几点，可申请商业授权
  */
 
 package com.taotao.cloud.message.biz.channels.websockt.stomp.service;
 
-import com.taotao.cloud.data.jpa.base.repository.BaseRepository;
-import com.taotao.cloud.message.biz.channels.websockt.stomp.repository.NotificationRepository;
-import com.taotao.cloud.message.biz.mailing.entity.Announcement;
-import com.taotao.cloud.message.biz.mailing.entity.Notification;
-import com.taotao.cloud.message.biz.mailing.entity.PullStamp;
-import com.taotao.cloud.websocket.stomp.core.NotificationCategory;
+import cn.herodotus.engine.data.core.repository.BaseRepository;
+import cn.herodotus.engine.data.core.service.BaseService;
+import cn.herodotus.engine.message.core.enums.NotificationCategory;
+import cn.herodotus.engine.supplier.message.entity.Announcement;
+import cn.herodotus.engine.supplier.message.entity.Notification;
+import cn.herodotus.engine.supplier.message.entity.PullStamp;
+import cn.herodotus.engine.supplier.message.repository.NotificationRepository;
 import jakarta.persistence.criteria.Predicate;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.ObjectUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -37,20 +45,20 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
-/** NotificationQueueService */
+/**
+ * <p>Description: NotificationQueueService </p>
+ *
+ * @author : gengwei.zheng
+ * @date : 2022/12/7 22:08
+ */
 @Service
-public class NotificationService extends BaseLayeredService<Notification, String> {
-
-    private static final Logger log = LoggerFactory.getLogger(NotificationService.class);
+public class NotificationService extends BaseService<Notification, String> {
 
     private final NotificationRepository notificationRepository;
     private final PullStampService pullStampService;
     private final AnnouncementService announcementService;
 
-    public NotificationService(
-            NotificationRepository notificationRepository,
-            PullStampService pullStampService,
-            AnnouncementService announcementService) {
+    public NotificationService(NotificationRepository notificationRepository, PullStampService pullStampService, AnnouncementService announcementService) {
         this.notificationRepository = notificationRepository;
         this.pullStampService = pullStampService;
         this.announcementService = announcementService;
@@ -70,12 +78,12 @@ public class NotificationService extends BaseLayeredService<Notification, String
         }
     }
 
-    public Page<Notification> findByCondition(
-		int pageNumber, int pageSize, String userId, NotificationCategory category, Boolean read) {
+    public Page<Notification> findByCondition(int pageNumber, int pageSize, String userId, NotificationCategory category, Boolean read) {
 
         Pageable pageable = PageRequest.of(pageNumber, pageSize);
 
         Specification<Notification> specification = (root, criteriaQuery, criteriaBuilder) -> {
+
             List<Predicate> predicates = new ArrayList<>();
 
             predicates.add(criteriaBuilder.equal(root.get("userId"), userId));
@@ -94,14 +102,11 @@ public class NotificationService extends BaseLayeredService<Notification, String
             return criteriaQuery.getRestriction();
         };
 
-        log.debug("[Websocket] |- Notification Service findByCondition.");
         return this.findByPage(specification, pageable);
     }
 
     private List<Notification> convertAnnouncementsToNotifications(String userId, List<Announcement> announcements) {
-        return announcements.stream()
-                .map(announcement -> convertAnnouncementToNotification(userId, announcement))
-                .toList();
+        return announcements.stream().map(announcement -> convertAnnouncementToNotification(userId, announcement)).collect(Collectors.toList());
     }
 
     private Notification convertAnnouncementToNotification(String userId, Announcement announcement) {
@@ -116,8 +121,6 @@ public class NotificationService extends BaseLayeredService<Notification, String
     }
 
     public int setAllRead(String userId) {
-        int result = notificationRepository.updateAllRead(userId);
-        log.debug("[Websocket] |- Notification Service setAllRead.");
-        return result;
+        return notificationRepository.updateAllRead(userId);
     }
 }
